    is deprecated (Stanislav Shwartsman)
  - Removed --enable-pni configure option, to compile with PNI use 
    --enable-sse=3 instead (Stanislav Shwartsman)
  - enable SEP (SYSENTER/SYSEXIT) support by default for Penitum II+
    processor emulation (i.e. if cpu-level >= 6 and MMX is enabled)

- general
  - limited save/restore support added. The state of CPU, memory and all
    devices can be saved now (harddisk images not handled yet).
  - fixed several memory leaks

- configuration interface
  - configuration parameter handling rewritten to a parameter tree. This is
    required for dynamic menus/dialogs, user-defined options and save/restore.
  - support for user-defined bochsrc options added

- I/O devices (Volker)
  - floppy
    - partial sector transfers fixed
  - hard drive /cdrom
    - several fixes to the IDE register behaviour in case of a channel with
      only one drive connected
    - fixed data alignment of 'growing' hard drive images (sharing images
      between Windows and Linux now possible)
  - pci
    - forward PIRQ register changes to the I/O APIC (if present)

-------------------------------------------------------------------------
Changes in 2.2.6 (January 29, 2006):

- First major SMP release ! 
  - several APIC and I/O APIC fixes make SMP Bochs booting Windows NT4.0 
    or Knoppix 4.0.2 without noapic kernel option in SMP configuration.
  - critical APIC timer bug fixed 
  - obsolete SMP BIOS images removed (MP tables created dynamicaly) 
  - determine number of processors in SMP configuration through .bochsrc 
    new .bochsrc option 'CPU' allows to choose number of processors to emulate
  - new configure option --enable-smp to configure Bochs for SMP support, 
    the old --enable-processors=N option is deprecated 
- CPU and internal debugger fixes 
  - enabled #PCE bit in CR4 register, previosly setting of this bit 
    generated #GP(0) fault 
  - enabled LAHF/SAHF instructions in x86-64 mode 